--- a/index.html
+++ b/index.html
@@ -6,15 +6,19 @@
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>Simple Sketch</title>
   <link rel="stylesheet" href="styles.css">
+  <link rel="icon" href="https://cdn-icons-png.flaticon.com/512/214/214275.png">
   <script src="script.js" defer></script>
 </head>
 <body>
-   <div id="container">
-       
-  </div>
-  <div class="slidecontainer">
-    <input type="range" min="1" max="64" value="16" id="slider" oninput="updateDivs(this.value)">
-    <input type="number" min="1" max="64" value="16" id="slider-value" oninput="updateSlider(this.value)"></input>
+  <div id="container">
+    <div id="color-section"></div>
+    <div id="grid-section">
+      <div id="grid-container"></div>
+      <div class="slidecontainer">
+        <input type="range" min="1" max="64" value="16" id="slider" oninput="updateGridSize(this.value)">
+        <input type="number" min="1" max="64" value="16" id="slider-value" oninput="updateSlider(this.value)"></input>
+      </div>
+    </div>
   </div>
 </body>
 </html>
