clear button functionality

--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
 </head>
 <body>
   <div id="container">
-    <div id="color-section"></div>
+    <div id="control-section">
+      <div id="color-section"></div>
+      <button id="clear-button">Clear</button>
+    </div>
     <div id="grid-section">
       <div id="grid-container"></div>
       <div class="slidecontainer">
