color selction highlights

--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
   <div id="container">
     <div id="control-section">
       <div id="color-section"></div>
+      <button id="eraser-button">
+        <img id="eraser" src="images/eraser.png"
+      </button>
       <button id="clear-button">Clear</button>
     </div>
     <div id="grid-section">
