--- a/index.html
+++ b/index.html
@@ -5,22 +5,26 @@
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>Simple Sketch</title>
+   <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
   <link rel="icon" href="https://cdn-icons-png.flaticon.com/512/214/214275.png">
   <script src="script.js" defer></script>
 </head>
 <body>
+  <h1>Simple Sketch</h1>
   <div id="container">
     <div id="control-section">
       <div id="color-section"></div>
       <button id="eraser-button">
-        <img id="eraser" src="images/eraser.png"
+        <img src="images/eraser.png">
       </button>
       <button id="clear-button">Clear</button>
     </div>
     <div id="grid-section">
       <div id="grid-container"></div>
-      <div class="slidecontainer">
+      <div id="slidecontainer">
         <input type="range" min="1" max="64" value="16" id="slider" oninput="updateGridSize(this.value)">
         <input type="number" min="1" max="64" value="16" id="slider-value" oninput="updateSlider(this.value)"></input>
       </div>
